Small cleanups. BigDecimal issue. Added 2 new tests for Schema check for DefaultType Signed-off-by:Phillip Kruger <phillip.kruger@gmail.com>